tests/ui/did_you_mean/use_instead_of_import.stderr
error: expected item, found `import`
  --> $DIR/use_instead_of_import.rs:3:1
   |
LL | import std::{
   | ^^^^^^
   |
help: items are imported using the `use` keyword
   |
LL - import std::{
LL + use std::{
   |

error: expected item, found `require`
  --> $DIR/use_instead_of_import.rs:9:1
   |
LL | require std::time::Duration;
   | ^^^^^^^
   |
help: items are imported using the `use` keyword
   |
LL - require std::time::Duration;
LL + use std::time::Duration;
   |

error: expected item, found `include`
  --> $DIR/use_instead_of_import.rs:12:1
   |
LL | include std::time::Instant;
   | ^^^^^^^
   |
help: items are imported using the `use` keyword
   |
LL - include std::time::Instant;
LL + use std::time::Instant;
   |

error: expected item, found `using`
  --> $DIR/use_instead_of_import.rs:15:5
   |
LL | pub using std::io;
   |     ^^^^^
   |
help: items are imported using the `use` keyword
   |
LL - pub using std::io;
LL + pub use std::io;
   |

error: aborting due to 4 previous errors

